[gd_scene load_steps=4 format=3 uid="uid://b7rgnvn4eq4ug"]

[ext_resource type="FontFile" uid="uid://bstyqfhv3nvy5" path="res://Font/PressStart2P-vaV7.ttf" id="1_hqxw0"]
[ext_resource type="Script" path="res://Scenes/game_over_screen.gd" id="1_yc8sb"]
[ext_resource type="AudioStream" uid="uid://dwn2b6f2p3n4l" path="res://Assets/musics/you_lose.mp3" id="3_merq8"]

[node name="GameOverScreen" type="CanvasLayer"]
script = ExtResource("1_yc8sb")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="Rows" type="VBoxContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 50

[node name="Title" type="Label" parent="MarginContainer/PanelContainer/Rows"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_constants/line_spacing = 0
theme_override_fonts/font = ExtResource("1_hqxw0")
theme_override_font_sizes/font_size = 50
text = "TENTE DE NOVO!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/PanelContainer/Rows"]
layout_mode = 2
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/Rows/CenterContainer"]
layout_mode = 2

[node name="Restart" type="Button" parent="MarginContainer/PanelContainer/Rows/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_hqxw0")
theme_override_font_sizes/font_size = 30
text = "RECOMEÃ‡AR	"

[node name="Quit" type="Button" parent="MarginContainer/PanelContainer/Rows/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_hqxw0")
theme_override_font_sizes/font_size = 30
text = "SAIR"

[node name="VoceGanhouMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_merq8")

[connection signal="pressed" from="MarginContainer/PanelContainer/Rows/CenterContainer/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/Rows/CenterContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
